Fix overlay in editor on tablet and mobile and social icons on mobile

--- a/less/header-style.less
+++ b/less/header-style.less
@@ -185,6 +185,9 @@
 
 .social-item {
     margin-right: 0;
+    @media @mobile {
+        margin-right: 0;
+    }
 }
 
 .social-link {
@@ -386,6 +389,16 @@
             color: lighten(@color-swatch4, 40%);
         }
     }
+}
+
+// Fix overlay in editor on tablet and mobile
+
+div#page-zones__template-widgets__extendednavigation-navigation-bk-overlay {
+    width: 30%;
+    left: inherit;
+    top: -44px;
+    height: 44px;
+    bottom: inherit;
 }
 
 
